일렉트론 완료
squat.js에서 음성, 카운트 추가해야됨

--- a/pages/fit.html
+++ b/pages/fit.html
@@ -2,12 +2,13 @@
 <html lang="ko">
     <head><link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" type="text/css" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 </head>
     <meta charset="UTF-8">
     <title>운동선택화면</title>
     <body>
-        <h1 id="clock" style="color:white;">clock</h1>
+        <h1 id="clock">clock</h1>
         <script>
             var Target = document.getElementById("clock");
             function clock() {
@@ -30,24 +31,6 @@
             clock();
             setInterval(clock, 1000); // 1초마다 실행
         </script>
-                <style>
-            *{  
-                text-align: center;
-                list-style: none;
-                text-decoration: none;
-                border-collapse: collapse;
-                margin:0px;
-                padding:0px;
-                background:#000;
-                color:white;
-                font-family: 'Noto Sans KR', sans-serif;
-            }  
-            .nav > li{
-                margin-top:50px;
-                font-size:30px;
-                text-align:center;
-            }
-            </style>
         <div class="wrap">
             <div class="intro">
                 <div class="header">
