--- a/pages/start.html
+++ b/pages/start.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <meta charest="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,7 @@
 </head>
 <body>
     <div class="clock">
-    <h1 id="clock" style="color:white;">clock</h1>
+    <h1 id="clock">clock</h1>
     <script>
         var Target = document.getElementById("clock");
         function clock() {
@@ -59,21 +60,4 @@
         });
     </script>
 
-    <style>
-    *{  
-        text-align: center;
-        list-style: none;
-        text-decoration: none;
-        border-collapse: collapse;
-        margin:0px;
-        padding:0px;
-        background:#000;
-        color:white;
-        font-family: 'Noto Sans KR', sans-serif;
-    }
-    .clock{
-        margin-bottom:20px;
-    }
-
-    </style>    
 </body>
