음성파일 추가, 카운트 추가
음성 파일 실행됨, 카운트 구현 아직

--- a/pages/fit.html
+++ b/pages/fit.html
@@ -40,7 +40,12 @@
                     <li><a href="#">런지</a></li>
                     <li><a href="#">케틀벨프레스</a></li>
                     <li><a href="#">버피테스트</a></li>
-                    <li><a href="#" onclick="histroy.back()">뒤로가기</a></li>
+                    <li><a href="#" onclick="goBack()">뒤로가기</a></li>
+                    <script>
+                        function goBack(){
+                            window.history.back();
+                        }
+                    </script>
                 </ul>
             </div>
         </div>
