--- a/pages/start.html
+++ b/pages/start.html
@@ -43,7 +43,9 @@
     <h4 class="lowtemp">최저 온도: </h4>
     <h4 class="hightemp">최고 온도: </h4>
     <h4 class="icon"></h4>
+    <div class="button">
     <button type="button" onclick="location.href='./fit.html'">운동하기</button>
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" 
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" 
     crossorigin="anonymous"></script>
