--- a/pages/squat.html
+++ b/pages/squat.html
@@ -11,13 +11,131 @@
   <title>Document</title>
 </head>
 <body>
-  <div>김민주의 스쿼트</div>
+  <div>스쿼트</div>
   <button type="button" onclick="history.back()">뒤로가기</button>
-  <!-- <button type="button" onclick="init()">Start</button> -->
+  <div class="container mt-5">
+    <div class="frame">
+        <div class="center">
+            <div class="headline">
+                <div class="small">Squat</div>Counter
+            </div>
+            <div class="circle-big">
+                <div class="text">
+                    <span id="counter">0</span><div class="small">개</div>
+                </div>
+                <svg>
+                    <circle class="bg" cx="57" cy="57" r="52" />
+                    <circle class="progress" cx="57" cy="57" r="52" />
+                </svg>
+            </div>
+        </div>
+    </div>
   <div><canvas id="canvas"></canvas></div>
   <div id="label-container"></div>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-  <script src="../js/squat.js"></script>
+  <!-- <script src="../js/squat.js"></script> -->
+<script>  
+// const tf = require('@tensorflow/tfjs');
+// const tmPose = require('@teachablemachine/pose');
+
+// More API functions here:
+// https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/pose
+
+// the link to your model provided by Teachable Machine export panel
+const URL = "../models/squat_model/";
+let model, webcam, ctx, labelContainer, maxPredictions;
+
+async function init() {
+    const modelURL = URL + "model.json";
+    const metadataURL = URL + "metadata.json";
+
+    // load the model and metadata
+    // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+    // Note: the pose library adds a tmPose object to your window (window.tmPose)
+    model = await tmPose.load(modelURL, metadataURL);
+    maxPredictions = model.getTotalClasses();
+
+    // Convenience function to setup a webcam
+    const size = 600;
+    const flip = true; // whether to flip the webcam
+    webcam = new tmPose.Webcam(size, size, flip); // width, height, flip
+    await webcam.setup({ frames: 60 }); // request access to the webcam
+    await webcam.play();
+    window.requestAnimationFrame(loop);
+
+    // append/get elements to the DOM
+    const canvas = document.getElementById("canvas");
+    canvas.width = size; canvas.height = size;
+    ctx = canvas.getContext("2d");
+    labelContainer = document.getElementById("label-container");
+    for (let i = 0; i < maxPredictions; i++) { // and class labels
+        labelContainer.appendChild(document.createElement("div"));
+    }
+}
+
+async function loop(timestamp) {
+    webcam.update(); // update the webcam frame
+    await predict();
+    window.requestAnimationFrame(loop);
+}
+var progress = 327
+var status = "stand"
+var count = 0
+async function predict() {
+    // Prediction #1: run input through posenet
+    // estimatePose can take in an image, video or canvas html element
+    const { pose, posenetOutput } = await model.estimatePose(webcam.canvas);
+    // Prediction 2: run input through teachable machine classification model
+    const prediction = await model.predict(posenetOutput);
+    if (prediction[0].probability.toFixed(2) > 0.90) {
+        if (status == "squat") {
+            count++
+            var audio = new Audio(count % 10 + '.mp3')
+            audio.play();
+        }
+        progress = progress-32.7
+                    if(progress <= 0) {
+                        progress = 327-32.7
+                    }
+        $('.progress').css('stroke-dashoffset', progress);
+        $('#counter').html(count);
+        status = "stand"
+    }
+    else if (prediction[1].probability.toFixed(2) == 1.00) {
+        if (status == "squat" || status == "stand") {
+            var audio = new Audio('bent.mp3')
+            audio.play();
+        }
+
+        status = "bent"
+    }
+    else if (prediction[2].probability.toFixed(2) == 1.00) {
+        status = "squat"
+    }
+    for (let i = 0; i < maxPredictions; i++) {
+        const classPrediction =
+            prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+        labelContainer.childNodes[i].innerHTML = classPrediction;
+    }
+
+    // finally draw the poses
+    drawPose(pose);
+}
+
+function drawPose(pose) {
+    if (webcam.canvas) {
+        ctx.drawImage(webcam.canvas, 0, 0);
+        // draw the keypoints and skeleton
+        if (pose) {
+            const minPartConfidence = 0.5;
+            tmPose.drawKeypoints(pose.keypoints, minPartConfidence, ctx);
+            tmPose.drawSkeleton(pose.keypoints, minPartConfidence, ctx);
+        }
+    }
+}
+
+init()
+</script>
 </body>
 </html>
